[package]
name = "ximidasdotcom_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.9"
load-dotenv = "0.1.2"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"
gloo = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
