[package]
name = "ximidasdotcom_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
actix-cors = "0.6"
anyhow = "1"
deadpool-postgres = { version = "0.10", features = ["serde"] }
derive_more = "0.99"
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-time-0_2",
    "with-serde_json-1",
] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
